# agent_ia_target

./: .env  README_STREAMLIT.md  app.py  pyproject.toml  task.md  test_integration.py  test_normalization.py  test_simple.py
.claude/: settings.local.json
sessions/: 1db89d7e.json  debug_test_20250730_161630.json
src/: chatbot_agents.py  debug_agent.py  debug_memory.py  duckdb_agent.py  simple_debug_memory.py  test_queries.py  validate_setup.py
src/ai_agent_agno.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
